--- a/Hotelling Model Explained.tex
+++ b/Hotelling Model Explained.tex
@@ -22,7 +22,7 @@
 \end{frame}
 
 \begin{frame}{Introduction}
-    This is the introduction slide.
+    Hotelling model will be explained in this note.
 \end{frame}
 
 \begin{frame}{Main Content}
